# k_flower_card

./: .gitattributes  .gitignore  .tmp_rule_blog.html  .tmp_rule_postview.html  AGENTS.md  AGENT_RULES.md  README.md  TRAINING_RUN_LOG.md  index.html  p3u30.txt  package-lock.json  package.json  run-dev.ps1  run-pip.ps1  run-preview.ps1  run-python.ps1  styles.css  styles.debug.css  vite.config.js
DeepHyperNEAT/: setup.py
Des-HyperNEAT-Python/: README.md  pyproject.toml
Des-HyperNEAT-Python/docs/: STATUS.md
DesAdapter/: README.md
archive/legacy_experiments_k_hyperneat_py/: pyproject.toml  smoke_developer.py  smoke_executor.py
archive/legacy_experiments_k_hyperneat_py/k_hyperneat/: __init__.py  config.py  coordinates.py  cppn.py  developer.py  search.py
configs/: action_vocab_v1.json  baseline_lock.json  neat_min.json  neat_runtime_i3_w6.json  neat_runtime_i3_w7.json  policy_filter_rules.json  value_filter_rules.json  value_filter_rules_bak.json  value_filter_rules_combo.json  value_filter_rules_meta.json
docs/: 2000G_MATCHUP_REPORT.md  BASELINE_LOCK.md  DEVELOPER_GUIDE.md  HANGAME_BASIC_RULE.md  KIBO_DATASET_GUIDE.md  NEAT_MIN_SPEC.md  claude_optimizer_reply_20260228.md
heuristic_tuning/: analyze_anticl_results_gpt.mjs  analyze_go_ev.mjs  optimizer_by_cl.mjs  optimizer_gpt.mjs  optuna_cl.py  optuna_gemini.py  optuna_gpt.py  optuna_nexg.py  tune_anticl_go_gpt.mjs
models/: _compat_policy.json  _compat_policy_real.json  _compat_value.json  _compat_value_real.json  _smoke_policy_tmp.json  _smoke_policy_tmp_345.json  _smoke_value_tmp.json  _smoke_value_tmp_345.json  (+73 more)
(+360 files in other folders)
