[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Des-HyperNEAT-Python"
version = "0.1.0"
description = "Python port of the DES-HyperNEAT core runtime and evolution stack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["des-hyperneat", "hyperneat", "neuroevolution", "cppn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/officialjaykoo/Des-HyperNEAT-Python"
Repository = "https://github.com/officialjaykoo/Des-HyperNEAT-Python"
Issues = "https://github.com/officialjaykoo/Des-HyperNEAT-Python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deshyperneat*"]
