[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k-hyperneat"
version = "0.1.0"
description = "Python core workspace for HyperNEAT / ES-HyperNEAT / DES-HyperNEAT style development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
evolve = ["neat-python>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["k_hyperneat*"]
